# auto-captioning-cli

./: .env.example  .gitignore  .replit  README.md  pyproject.toml  requirements.txt
data/: catalog.sample.json  catalog_scenes.json  comparison.sample.json  human_captions.jsonl
heimdex_ptp/: __init__.py  __main__.py  caption_api.py  catalog.py  clips.py  comparison.py  config.py  curate.py  frames.py  generate.py  jobs.py  media.py  scenes.py  validate.py
skill/: SKILL.md
skill/assets/: output_template.json
skill/references/: caption_writing_principles.md  examples.md  meta_fields.md  output_schema.md
skill/scripts/: validate_output.py
tests/: test_comparison.py  test_curate.py  test_frames.py  test_jobs.py  test_scenes.py  test_server_ratelimit.py
web/: index.html  server.py
